name:                system-log-transform 
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             PublicDomain 
license-file:        LICENSE
author:              CJ East
maintainer:          cje@ieee.org 
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

--Flag test
--  Description:  Build test suite
--  Default: False 

executable system-log-transform 
  main-is:             Main.hs  
  hs-source-dirs:      src 
  other-modules:       Types  
  build-depends:       base ==4.5.*
                     , text ==0.11.*
                     , attoparsec
                     , suffixtree 
                     , HUnit                >=1.2.5.2 && <1.3
                     , test-framework       >= 0.8  
                     , test-framework-hunit >= 0.3.0 

Test-Suite test-system-log-transform 
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test,src 
  main-is:             TMain.hs 
  build-depends:       base 
                     , text ==0.11.*
                     , attoparsec
                     , suffixtree 
                     , test-framework       >= 0.8  
                     , test-framework-hunit >= 0.3.0  
                     , HUnit                >=1.2.5.2 && <1.3
                     , Cabal 
                     , transformers

source-repository head
  type:     git
  location: git://github.com/cje/system-log-transform.git

